--- a/clover/src/app/components/payment/payment.component.css
+++ b/clover/src/app/components/payment/payment.component.css
@@ -168,7 +168,7 @@ body, html {
   html {
     font-size: 16px;
   }
-  
+/*   
   .plane {
     margin: 20px auto;
     max-width: 300px;
@@ -197,7 +197,7 @@ body, html {
       margin: 100px auto 35px auto;
     }
   }
-  
+     */
 
   .myButton2 {
     box-shadow: 0px 1px 0px 0px #f0f7fa;
@@ -414,3 +414,51 @@ body, html {
     -webkit-animation-name: rubberBand;
             animation-name: rubberBand;
   }
+
+/* 
+  input[type=checkbox] + label {
+    display: block;
+    margin: 0.2em;
+    cursor: pointer;
+    padding: 0.2em;
+  }
+  
+  input[type=checkbox] {
+    display: none;
+  }
+  
+  input[type=checkbox] + label:before {
+    content: "\2714";
+    border: 0.1em solid #000;
+    border-radius: 0.2em;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    padding-left: 0.2em;
+    padding-bottom: 0.3em;
+    margin-right: 0.2em;
+    vertical-align: bottom;
+    color: transparent;
+    transition: .2s;
+  }
+  
+  input[type=checkbox] + label:active:before {
+    transform: scale(0);
+  }
+  
+  input[type=checkbox]:checked + label:before {
+    background-color: MediumSeaGreen;
+    border-color: MediumSeaGreen;
+    color: #fff;
+  }
+  
+  input[type=checkbox]:disabled + label:before {
+    transform: scale(1);
+    border-color: #aaa;
+  }
+  
+  input[type=checkbox]:checked:disabled + label:before {
+    transform: scale(1);
+    background-color: #bfb;
+    border-color: #bfb;
+  } */
