--- a/clover/src/app/components/add-flight/add-flight.component.html
+++ b/clover/src/app/components/add-flight/add-flight.component.html
@@ -1,74 +1,63 @@
-<form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
+<div class="bg"> 
+<div class="conteiner8">
+    <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" >
 
-    <input type="hidden" name="flightID" [value]="service.formData.flightID">
+     <!-- <input type="hidden" name="flightID" [value]="service.formData.flightID"> -->
+   <!--  <input type="hidden" name="flightID" [value]="companyData.avioCompID"> -->
 
-      <div class="form-group">
-        From:
-        <input #from="ngModel" [(ngModel)]="service.formData.from" name="from" type="text" class="form-input" id="from" required/>
-      </div>
-
-      <div class="form-group">
-        To:
-        <input #to="ngModel" [(ngModel)]="service.formData.to" name="to" type="text" class="form-input" id="to" required/>
-      </div>
-
-      <div class="form-group">
-        <!-- <button class="btn-search" type="button">Add Image</button> -->
-        Departing:
-        <input #departing="ngModel" [(ngModel)]="service.formData.departing" name="departing" type="date" class="form-input" id="departing" required/>
-      </div>
-
-      <div class="form-group">
-        Returning:
-        <input #returning="ngModel" [(ngModel)]="service.formData.returning" name="returning"  type="date" class="form-input" id="returning" required/>
-      </div>
-
-      <div class="form-group">
-        Classf:
-        <input #classf="ngModel" [(ngModel)]="service.formData.classf" name="classf" type="text" class="form-input" id="classf" required/>
-      </div>
-
-      <div class="form-group">
-        Baggage:
-        <input #baggage="ngModel" [(ngModel)]="service.formData.baggage" name="baggage" type="text" class="form-input" id="baggage" required/>
-      </div>
-
-      <div class="form-group">
-        Stops:
-        <input #stops="ngModel" [(ngModel)]="service.formData.stops" name="stops" type="number" class="form-input" id="stops" required/>
-      </div>
-
-      <div class="form-group">
-        Duration:
-        <input #duration="ngModel" [(ngModel)]="service.formData.duration" name="duration" type="text" class="form-input" id="duration" required/>
-      </div>
-
-      <div class="form-group">
-        CompanyName:
-        <input #companyName="ngModel" [(ngModel)]="service.formData.companyName" name="companyName" type="text" class="form-input" id="companyName" required/>
-      </div>
-
-      <div class="form-group">
-        Price:
-        <input #price="ngModel" [(ngModel)]="service.formData.price" name="price" type="number" class="form-input" id="price" required/>
-      </div>
-      
-      <div class="form-group">
-        SeatsNumber:
-        <input #price="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number" class="form-input" id="seatsNumber" required/>
-      </div>
-
-      <div class="form-group">
-        RateFlight
-        <input #price="ngModel" [(ngModel)]="service.formData.rateFlight" name="rateFlight" type="number" class="form-input" id="rateFlight" required/>
-      </div>
-      
-      
-    
-      
-
-      <div class="form-group">
-        <input type="submit" name="submit" id="submit" class="form-submit" value="Add FLIGHT"/>
+    <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+           From:
+            <input #from="ngModel" name="from"    [(ngModel)]="service.formData.from"  type="text"  class="form-control" placeholder="City or airport" id="from"  required>
     </div>
+    <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+          To:
+          <input  #to="ngModel" name="to" class="form-control" [(ngModel)]="service.formData.to"  type="text" placeholder="City or airport"  id="to" required>
+    </div>
+     <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            Departing:
+       <input #departing="ngModel" name="departing" class="form-control"   [(ngModel)]="service.formData.departing"  id="departing" type="date" required>
+      </div>
+      <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            Returning:
+                    <input #returning="ngModel"  name="returning"  [(ngModel)]="service.formData.returning" id="returning" class="form-control" type="date" required>
+     </div>
+     <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            Classf:
+                    <input #classf="ngModel" name="classf"  [(ngModel)]="service.formData.classf"  id="classf" class="form-control" type="text" placeholder="class" required>
+    </div>
+    <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            Baggage:
+                    <input  #baggage="ngModel" name="baggage" [(ngModel)]="service.formData.baggage"   id="baggage" class="form-control" type="text" placeholder="baggage" required>
+    </div>   
 
-  </form>
+    <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            Stops:
+                    <input #stops="ngModel" name="stops"  [(ngModel)]="service.formData.stops"  id="stops" class="form-control" type="number" placeholder="stops" required>
+    </div>   
+      <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            Duration:
+                    <input #duration="ngModel" name="duration"   [(ngModel)]="service.formData.duration" id="duration" class="form-control" type="text" placeholder="duration" required>
+    </div> 
+        <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+                    Company Name:
+                    <input #companyName="ngModel" name="companyName"  [(ngModel)]="service.formData.companyName"  id="companyName" class="form-control" type="text" placeholder="companyName" required>
+    </div>   
+    <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+                    Price:
+                    <input #price="ngModel" name="price"  [(ngModel)]="service.formData.price"  id="price" class="form-control" type="number" placeholder="price" required>
+    </div>   
+
+
+    <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+            SeatsNumber:
+            <input #seatsNumber="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number"  class="form-control"  id="seatsNumber" required/>
+          </div>
+    
+   
+
+    <div class="form-group">
+     <input  type="submit" name="submit" id="submit" class="form-submit" value="Change Flight" class="poz"/>
+    </div>
+    </form>
+</div>
+</div>
