--- a/clover/src/app/components/flights/search-flight/search-flight.component.html
+++ b/clover/src/app/components/flights/search-flight/search-flight.component.html
@@ -11,10 +11,13 @@
         
     <div *ngFor="let flight of searchedFlights | flightFilter: searchCompanyName | flightFilter2: searchDuration | flightFilter3:searchPrice" class="div1">
             <div class="div2">{{flight.departing.toLocaleString()}}</div>
+            <div class="div">{{flight.startTime}}</div>
+
             <div class="div3From">{{flight.from}}</div>
             <div class="image"></div>
             <div class="div4">{{flight.returning.toLocaleString()}}</div>
             <div class="div5To">{{flight.to}}</div>
+            <div class="div56">{{flight.endTime}}</div>
             <div class="divName">{{flight.companyName}}</div>
             <div class="btn">
             <button (click)="onSelect(flight)" class="myButton">BOOK {{flight.price}}$</button>
