#AB37 - Rent Admin change password

--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -12,7 +12,7 @@
         <a  class="nav-link" routerLink="sing-in">Sing In</a>
       </li>
       <li *ngIf="IsSignedIn()" class="nav-item">
-        <a  class="nav-link" (click)="LogOut()" routerLink="sing-in">Log Out</a>
+        <a  class="nav-link" (click)="LogOut()">Log Out</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="flights">Flights</a>
