--- a/clover/src/app/components/register-user/change-password/change-password/change-password.component.html
+++ b/clover/src/app/components/register-user/change-password/change-password/change-password.component.html
@@ -7,6 +7,6 @@
     </div>
 
     <div class="form-group">
-        <input type="submit" [disabled]="changePassword.invalid" name="submit" id="submit" class="form-submit" value="Sign in"/>
+        <input type="submit" [disabled]="changePassword.invalid" name="submit" id="submit" class="form-submit" value="Change"/>
     </div>
 </form>
