--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -115,7 +115,19 @@
                             <div class="div3From" style="margin-left: 15%;">Brand:{{reservation.car.brand}}</div>
                             <div>Pocetni datum:{{reservation.startDate}}</div>
                             <div>Krajnji datum:{{reservation.endDate}}</div>
-                            <button style="margin-left: 70%;" (click)="deleteResercation(reservation)" class="myButton2">Delete Reservation</button>
+                            <button style="margin-left: 60%; margin-top: -10%;" (click)="deleteResercation(reservation)" class="myButton2">Delete Reservation</button>
+
+                            <form style="margin-left: 85%; margin-top: -3%;" #form="ngForm" [formGroup]="carRate" autocomplete="off" (ngSubmit)="onSubmit()" id="signup-form" class="signup-form">
+                                <div class="form-group">
+                                    <input type="number" style="width: 60px;" name="rate" id="rate" class="form-input" placeholder="Rate" formControlName="rate"/>
+                                    <div class="validation-error" *ngIf="(carRate.get('rate').invalid && carRate.get('rate').touched)">This field is required</div>
+                                </div>
+                            
+                                <div class="form-group">
+                                    <input type="submit" [disabled]="carRate.invalid" name="submit" id="submit" class="form-submit" value="Rent"/>
+                                </div>
+                            </form>
+
                         </div>
                     </div>
                 </div>
