--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -4,8 +4,8 @@
     <div class="bg">
             <form class="form-inline">
                     <div class="md-form my-0" style="margin-left: 750px;">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Find Frends" aria-label="Search" [(ngModel)]="searchFriend" >
-                        <button type="button" (click)="seeAllUsers()" class="btn btn-success btn-sm">Find</button>
+                        
+                        <!-- <button type="button" (click)="seeAllUsers()" class="btn btn-success btn-sm">Find</button> -->
                     </div>
                 </form>
         <!-- <div class="container" style="margin-top: 30px;"> -->
@@ -41,6 +41,11 @@
                                     <a routerLink="/register-user">
                                         <i class="glyphicon glyphicon-list"></i>
                                         Reservation Cars </a>
+                                </li>
+                                <li (click)="seeAllUsers()">
+                                    <a routerLink="/register-user">
+                                        <i class="glyphicon glyphicon-user"></i>
+                                        All users </a>
                                 </li>
                                 <li (click)="ispisPrijatelja()">
                                     <a routerLink="/register-user">
@@ -80,6 +85,7 @@
 
                 <div class="col-md-9">
                     <div>
+                            <input  type="text" placeholder="Find Frends"  [(ngModel)]="searchFriend" >
                         <div *ngFor="let rUser of allRegistredUsers | users:searchFriend"  class="div1">
                             <div class="div2"></div>
                             <div class="div3From">{{rUser.email}}</div>
