--- a/clover/src/app/components/car/rent-a-car/locations-rent/locations-rent/locations-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/locations-rent/locations-rent/locations-rent.component.html
@@ -12,48 +12,47 @@
 </header>
 
 
-<div [hidden]="this.rentService.serviceOffice === undefined">
-  <hr/>
-  <h5 style="text-align: center;">Trenutno nema dostupnih offica koja zadovoljavaju zadate parametre.</h5>
-</div>
-<div [hidden]="this.rentService.serviceOffice == undefined">
-    <div *ngFor="let office of this.allOffice" class="div1">
-      <div class="divName">{{office.officeName}}</div>
-      <div class="div5To"><Address></Address>: {{office.address}} </div>
-      <div class="btn">
-      <button class="myButton" [hidden]="check()" (click)="onDelete(office.officeId)">Delete</button>
-    </div>
-    </div>
-</div>
-
-
-<!-- <div [hidden]="this.rentService.serviceOffice.length === 0" id="locations" class="locations"> -->
-<div id="locations" class="locations">
-  <agm-map [zoom]="9" [latitude]="this.rentService.serviceOffice[0].lat" [longitude]="this.rentService.serviceOffice[0].lng">
-    <div *ngFor="let office of this.rentService.serviceOffice" class="div1">
-      <agm-marker [latitude]="office.lat" [longitude]="office.lng">
-      </agm-marker>
-    </div>
-  </agm-map>
-</div>
-<!-- </div> -->
-
-
-
-
 <section id="admin" [hidden]="check()">
   <div class="adminDiv">
     <div class="booking-form">
-      <form style="margin-top: 17%;">
-            <p style="color:white;"> Admin Services</p>
-              <div class="form-btn">
-                <button class="submit-btn" type="button" (click)="onAddOffice()">Add Office</button>
-              </div>
+      <form style="margin-top: 27%;">
+        <p style="color:white;"> Admin Services</p>
+        <div class="form-btn">
+          <button class="submit-btn" type="button" (click)="onAddOffice()">Add Office</button>
+        </div>
       </form>
     </div>
-    </div>
+  </div>
 </section>
 
+<div [hidden]="this.rentService.serviceOffice?.length !== 0">
+  <hr />
+  <h5 style="text-align: center;">Trenutno nema dostupnih offica koja zadovoljavaju zadate parametre.</h5>
+</div>
+<div [hidden]="this.rentService.serviceOffice?.length === 0">
+  <div *ngFor="let office of this.allOffice" class="div1">
+    <div class="divName">{{office.officeName}}</div>
+    <div class="div5To">
+      <Address></Address>: {{office.address}}
+    </div>
+    <div class="btn">
+      <button class="myButton" [hidden]="check()" (click)="onDelete(office.officeId)">Delete</button>
+    </div>
+  </div>
+</div>
+
+
+<div [hidden]="this.rentService.serviceOffice?.length === 0">
+  <div id="locations" class="locations">
+    <agm-map [zoom]="9" [latitude]="this.rentService.serviceOffice[0].lat"
+      [longitude]="this.rentService.serviceOffice[0].lng">
+      <div *ngFor="let office of this.rentService.serviceOffice" class="div1">
+        <agm-marker [latitude]="office.lat" [longitude]="office.lng">
+        </agm-marker>
+      </div>
+    </agm-map>
+  </div>
+</div>
 
 
 
