#22Voting - Car Rate

--- a/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
@@ -19,7 +19,7 @@
           <div class="form-group">
             <span class="form-label">Start Office</span>
             <select style="width: 175px;" [(ngModel)]="startOffice" class="form-control">
-              <option *ngFor="let f of this.rentService.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
+              <option *ngFor="let f of this.rentService?.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
             </select>
           </div>
         </div>
@@ -52,7 +52,7 @@
           <div class="form-group">
             <span class="form-label">End Office</span>
             <select style="width: 175px;" [(ngModel)]="endOffice" class="form-control">
-              <option *ngFor="let f of this.rentService.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
+              <option *ngFor="let f of this.rentService?.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
             </select>
           </div>
         </div>
@@ -127,11 +127,11 @@
 
 
   <div class="conteiner3" id="style-22">
-    <div [hidden]="this.rentService.serviceCars.length !== 0">
+    <div [hidden]="this.rentService?.serviceCars?.length !== 0">
       <hr/>
       <h5 style="text-align: center;">Trenutno nema dostupnih vozila koja zadovoljavaju zadate parametre.</h5>
     </div>
-    <div [hidden]="this.rentService.serviceCars.length === 0">
+    <div [hidden]="this.rentService?.serviceCars?.length === 0">
       <app-car-filter [filtredCars]="filtredCars"></app-car-filter>
      </div>
     </div>
