--- a/clover/src/app/components/car/car-filter/car-filter.component.html
+++ b/clover/src/app/components/car/car-filter/car-filter.component.html
@@ -1,12 +1,12 @@
 
     <!-- <div *ngFor="let car of this.dataCars.selectedService.serviceCars" class="div1"> -->
-      <div *ngFor="let car of this.filtredCars" class="div1">
+      <div *ngFor="let car of this.rentService?.serviceCars" class="div1">
         <div class="image" style="content:url({{car.imgUrl}})"></div>
         <!-- <div class="divName">{{car.serviceName}}</div> -->
         <div class="div5To">Brand: {{car.brand}}  Year:{{car.year}}</div>
         <div class="div6To">Model: {{car.model}} Seats:{{car.numOfSeats}}</div>
         <div class="div3From">{{car.location}} Type:{{car.typeOfCar}}</div>
-        <div class="rate"> <ngb-rating [rate]="this.car.pricePerDay"></ngb-rating> </div> 
+        <div class="rate"> <ngb-rating [rate]="car.averageRate"></ngb-rating> </div> 
         
         
         <div class="btn">
