--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -21,7 +21,7 @@
       <!-- owl-carousel -->
 
       <div
-        *ngFor="let rentService of filtredRentServices | rentFilter: searchRentName | rentFilter2: searchRentLocation"
+        *ngFor="let rentService of allRentService | rentFilter: searchRentName | rentFilter2: searchRentLocation"
         class="list">
         <div class="item">
           <div class="pricing pricing-two">
@@ -29,7 +29,7 @@
               <h3>{{rentService.serviceName}}</h3>
               <p>{{rentService.location}}</p>
               <div class="rate">
-                <ngb-rating [rate]="3"></ngb-rating>
+                <ngb-rating [rate]="rentService.rate"></ngb-rating>
               </div>
             </div>
             <div class="pricing-bottom">
