--- a/clover/src/app/components/add-flight/add-flight.component.html
+++ b/clover/src/app/components/add-flight/add-flight.component.html
@@ -7,7 +7,7 @@
 
     <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
            From:
-            <input #from="ngModel" name="from"    [(ngModel)]="service.formData.from"  type="text"  class="form-control" placeholder="City or airport" id="from"  required>
+            <input #from="ngModel" name="from"    [(ngModel)]="service.formData.from"  type="text"  class="form-control"  id="from"  required>
     </div>
     <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
           To:
@@ -23,7 +23,7 @@
      </div>
      <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
             Classf:
-                    <input #classf="ngModel" name="classf"  [(ngModel)]="service.formData.classf"  id="classf" class="form-control" type="text" placeholder="class" required>
+                    <input #classf="ngModel" name="classf"  [(ngModel)]="service.formData.classf"  id="classf" class="form-control" type="text"  required>
     </div>
     <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
             Baggage:
@@ -53,6 +53,15 @@
             <input #seatsNumber="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number"  class="form-control"  id="seatsNumber" required/>
           </div>
     
+          <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+                        Start time:
+                        <input #startTime="ngModel" [(ngModel)]="service.formData.startTime" name="startTime" type="time"  class="form-control"  id="startTime" required/>
+                      </div>
+
+                      <div class="form-group" style="color:rgba(226, 225, 225, 0.966);">
+                        End time:
+                        <input #endTime="ngModel" [(ngModel)]="service.formData.endTime" name="endTime" type="time"  class="form-control"  id="endTime" required/>
+                      </div>
    
 
     <div class="form-group">
