User info change/avio image

--- a/clover/src/app/components/company-profile/company-profile.component.css
+++ b/clover/src/app/components/company-profile/company-profile.component.css
@@ -794,7 +794,7 @@ div.image {
   height: 100px;
   left: 250px;
   top: 12px;
-  content:url(//avio.png);
+  content:url(../company-profile/avio.png);
  
 }
 .image2 {
