--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -67,8 +67,8 @@
                                         <i class="glyphicon glyphicon-list-alt"></i>
                                         Your invites </a>
                                 </li>
-                                <li>
-                                    <a routerLink="/register-user">
+                                <li (click)="changeInfo()">
+                                    <a >
                                         <i class="glyphicon glyphicon-wrench"></i>
                                         Account Settings </a>
                                 </li>
