--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -18,7 +18,7 @@
 											</label>
 											<label for="multi-city">
 												<input (click)="onButtonClick2($event)" type="radio" id="multi-city" name="flight-type">
-												<span></span>Multi-City
+												<span></span>Return trip
 											</label>
 										</div>
 									</div>
@@ -32,7 +32,7 @@
 										<div class="col-md-6">
 											<div class="form-group">
 												<span  class="form-label">Flyning to</span>
-												<input [disabled]="disable" class="form-control" type="text" placeholder="City or airport" id="searchToFilter">
+												<input  class="form-control" type="text" placeholder="City or airport" id="searchToFilter">
 											</div>
 										</div>
 									</div>
