--- a/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
@@ -13,28 +13,21 @@
 
 <div class="filter">
 <div class="booking-form">
-    <form>
+    <form [formGroup]="DateForm">
       <div class="row">
         <div class="col-md-3">
           <div class="form-group">
             <span class="form-label">Start Office</span>
-            <select style="width: 175px;" [(ngModel)]="startOffice" class="form-control">
+            <select style="width: 150px;" [(ngModel)]="startOffice" class="form-control">
               <option *ngFor="let f of this.rentService?.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
             </select>
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div style="margin-left: -3%;" class="col-md-3">
           <div class="form-group">
             <span style="margin-left: -25%;" class="form-label">Start Location</span>
-            <input style="width: 175px; margin-left: -30%;" class="form-control" type="text" placeholder="Start Location" id="startLocationFilter">
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="form-group">
-            <span style="margin-left: -50%;" class="form-label">Start Date</span>
-            <input style="width: 175px; margin-left: -53%;" class="form-control" type="date" required>
+            <input style="width: 150px; margin-left: -30%;" class="form-control" type="text" placeholder="Start Location" id="startLocationFilter">
           </div>
         </div>
 
@@ -45,44 +38,58 @@
           </div>
         </div>
 
+        <div style="margin-left: -3%;" class="col-md-3">
+          <div class="form-group">
+            <span class="form-label">Start Date</span>
+            <input style="width: 150px;" class="form-control" type="date" formControlName="startDate" required>
+          </div>
+        </div>
+
       </div>
       
       <div class="row">
         <div class="col-md-3">
           <div class="form-group">
             <span class="form-label">End Office</span>
-            <select style="width: 175px;" [(ngModel)]="endOffice" class="form-control">
+            <select style="width: 150px;" [(ngModel)]="endOffice" class="form-control">
               <option *ngFor="let f of this.rentService?.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
             </select>
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div style="margin-left: -3%;" class="col-md-3">
           <div class="form-group">
             <span style="margin-left: -25%;" class="form-label">End Location</span>
-            <input style="width: 175px; margin-left: -30%;" class="form-control" type="text" placeholder="End Location" id="endLocationFilter">
-          </div>
-        </div>
-        
-        <div class="col-md-3">
-          <div class="form-group">
-            <span style="margin-left: -50%;" class="form-label">End Date</span>
-            <input style="width: 175px; margin-left: -53%;" class="form-control" type="date" required>
+            <input style="width: 150px; margin-left: -30%;" class="form-control" type="text" placeholder="End Location" id="endLocationFilter">
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div style="margin-left: -16%;" class="col-md-4">
           <div class="form-group">
             <span class="form-label">Price</span>
-            <input class="form-control" style="width: 35%;" type="number" placeholder="Price" id="carMaxPerDayPriceFilter">
+            <input class="form-control" style="width: 100px;" type="number" placeholder="Price" id="carMaxPerDayPriceFilter">
+          </div>
+        </div>
+
+        <div style="margin-left: -23%; margin-top: 0.4%;" class="col-md-2">
+          <div class="form-btn">
+            <button class="submit-btn" (click)="filterCars()">Show Filtred Cars</button>
+          </div>
+        </div>
+
+        <div style="margin-left: 3%;" class="col-md-3">
+          <div class="form-group">
+            <span  class="form-label">End Date</span>
+            <input style="width: 150px;" class="form-control" type="date" formControlName="endDate" required>
+          </div>
+        </div>
+
+        <div style="margin-left: -8%;" class="col-md-2">
+          <div class="form-btn">
+            <button style="width: 220px;" class="submit-btn" (click)="filterAvelableCars()">Show Avelable Cars</button>
           </div>
         </div>
         
-        <div class="col-md-2">
-          <div class="form-btn">
-            <button class="submit-btn" (click)="filterCars()">Show Cars</button>
-          </div>
-        </div>
       </div>
     </form>
   </div>     
@@ -110,23 +117,23 @@
   </div>
 </div>
 
-  <section id="admin" [hidden]="check()">
+  <section style="margin-top: -30%;" id="admin" [hidden]="check()">
     <div class="adminDiv">
       <div class="booking-form">
         <form style="margin-top: 17%;">
               <p style="color:white;"> Admin Services</p>
                 <div class="form-btn">
-                  <!-- <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button> -->
+                  <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button>
                 </div>
         </form>
       </div>
       </div>
   </section>
 
-  <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button>
+  <!-- <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button> -->
 
 
-  <div class="conteiner3" id="style-22">
+  <div style="margin-top: -12%;" class="conteiner3" id="style-22">
     <div [hidden]="this.rentService?.serviceCars?.length !== 0">
       <hr/>
       <h5 style="text-align: center;">Trenutno nema dostupnih vozila koja zadovoljavaju zadate parametre.</h5>
