--- a/clover/src/app/components/company-profile/company-profile.component.html
+++ b/clover/src/app/components/company-profile/company-profile.component.html
@@ -2,7 +2,7 @@
         <div class="bg"> 
         <div class="conteinter4">
         <div class="image2"></div>
-        <div class="about"><p style="color:whitesmoke">{{companyData.avioCompName}}s</p></div>
+        <div class="about"><p style="color:whitesmoke">{{companyData.avioCompName}} prosecna ocena je{{this.prosek}}</p></div>
         
             
         </div>
