--- a/clover/src/app/components/car/car-filter/FastRentCar/fast-rent-car/fast-rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/FastRentCar/fast-rent-car/fast-rent-car.component.html
@@ -4,7 +4,7 @@
     <div class="div5To">Brand: {{car.brand}}  Year:{{car.year}}</div>
     <div class="div6To">Model: {{car.model}} Seats:{{car.numOfSeats}}</div>
     <div class="div3From">{{car.location}} Type:{{car.typeOfCar}}</div>
-    <div class="rate"> <ngb-rating [rate]="3"></ngb-rating> </div> 
+    <div class="rate"> <ngb-rating [rate]="car.averageRate"></ngb-rating> </div> 
     
     
     <div class="btn">
