--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -100,35 +100,15 @@
 					<input  type="radio" value="city" #mySelection2 (click)="Sort1(mySelection2.value)" name="sort">
 					<p style="color:lavenderblush"> City</p>
 				</div> -->
-				<div class="radio" style="width:150px;">
-					<div class="s002" >
-					  <form>
-						<div class="inner-form">
-						  <div class="input-field fifth-wrap">
-							<p style="color:lavenderblush"> Sort</p>
-							<div class="input-field fifth-wrap">
-							  <div class="row">
-								<input type="radio" value="name" #mySelection1 (click)="Sort1(mySelection1.value)"  name="sort" style="height: 1em; margin-left: -47%;">
-								<p style="color:lavenderblush"> Name</p>
-							  </div>
-							  <div class="row">
-								<input type="radio" value="city" #mySelection2 (click)="Sort1(mySelection2.value)" name="sort" style="height: 1em; margin-left: -47%;">
-								<p style="color:lavenderblush"> City</p>
-							  </div>
-							</div>
-						  </div>
-						</div>
-					  </form>
-					</div>
-				  </div>
+
 					
 						<div class="wrapper" *ngFor="let company of allAvioCompanies">
 							
-							<p class="resp-tabs-list">  </p>
+							<!-- <p class="resp-tabs-list">  </p> -->
 							<div class="cols">
 									  <div (click)="onSelect(company)" class="col" ontouchstart="this.classList.toggle('hover');">
-										  <div class="container">
-											  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+										  <div class="container" style= "margin-top: -26%;">
+											  <div  class="front" style="background-image: url(https://unsplash.it/500/500/);height: 100px;">
 												  <div class="inner">
 													  <p>{{company.avioCompName}}</p>
 										<span>{{company.avioCompAddress}}</span>
@@ -158,7 +138,7 @@
 							<hr/>
 							<h5 style="text-align: center;">Trenutno nema dostupnih LETOVA koja zadovoljavaju zadate parametre.</h5>
 						  </div>
-						  <div [hidden]="searchedFlights.length === 0">
+						  <div [hidden]="searchedFlights.length === 0" >
 							<app-search-flight [searchedFlights]="searchedFlights"></app-search-flight>
 						  </div>
 
@@ -169,5 +149,27 @@
 				
 				
 
+						  <div  style="width:150px;margin-left:96%;">
+							  <div class="s002" >
+								<form>
+								  <div class="inner-form">
+									<div class="input-field fifth-wrap">
+									  <p style="color:lavenderblush"> Sort</p>
+									  <div class="input-field fifth-wrap">
+										<div class="row">
+										  <input type="radio" value="name" #mySelection1 (click)="Sort1(mySelection1.value)"  name="sort" style="height: 1em;">
+										  <p style="color:lavenderblush"> Name</p>
+										</div>
+										<div class="row">
+										  <input type="radio" value="city" #mySelection2 (click)="Sort1(mySelection2.value)" name="sort" style="height: 1em;">
+										  <p style="color:lavenderblush"> City</p>
+										</div>
+									  </div>
+									</div>
+								  </div>
+								</form>
+							  </div>
+							</div>
 		</div>
+
 		</body>
